testien konffaus ja pari testiä